# Tier-based-Bonding-Curve-Token-Launcher

./: .gitignore
backend/: holdings.json  oldserver.js  package-lock.json  package.json  server.js  tokens.json  utils.js
backend/config/: index.js
backend/instructions/: buy.js  derive.js  initCurve.js  migrate.js  prepareMintAndPool.js  sell.js
backend/keys/: migration-authority.json
backend/lib/: chain.js  db.js  files.js  quotes.js  sse.js  verifyTurnstile.js
backend/routes/: comments.js  leaderboard.js  migration.js  misc.js  tokens.js  trading.js  uploads.js  wallet.js
bonding_curve/bonding_curve/: Anchor.toml  Cargo.toml
bonding_curve/bonding_curve/programs/bonding_curve/: Cargo.toml
bonding_curve/bonding_curve/programs/bonding_curve/src/: consts.rs  errors.rs  lib.rs  state.rs
bonding_curve/bonding_curve/programs/bonding_curve/src/instructions/: add_liquidity.rs  buy.rs  create_pool.rs  finalize_migration.rs  initialize.rs  mod.rs  remove_liquidity.rs  sell.rs  start_migration.rs
bonding_curve/bonding_curve/programs/bonding_curve/src/utils/: calc.rs  curve.rs  curve_lut_data.rs  mod.rs
bonding_curve/bonding_curve/programs/bonding_curve/tests/: bonding_curve_test.rs
bonding_curve/bonding_curve/tests/: bonding_curve_test.rs
frontend/: form.html  form.js  home.html  index.html  package-lock.json  package.json  token.js
frontend-backup/: form.js  home.js  token.html  token.js  utils.js
frontend/public/: lut.dec9.json
frontend/scripts/: lut.js
frontend/src/app/: AppShell.js  globals.css  layout.js  page.js  utils.js
frontend/src/app/components/: BondingCurve.js  Comments.js  Header.js  PriceChart.js  SiteBanner.js  leaderboard.js
frontend/src/app/form/: page.js  script.js
frontend/src/app/home/: page.js  script.js
frontend/src/app/profile/: page.js
frontend/src/app/token/: page.js  script.js
