[workspace]
members = ["programs/bonding_curve"]
resolver = "2"

[workspace.package]
edition = "2021"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[workspace.dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = "0.30.1"
solana-program = "1.17"
solana-program-test = "1.17"
solana-sdk = "1.17"
anyhow = "1.0.44"
