[workspace]
members = ["programs/bonding_curve"]
resolver = "2"

[workspace.package]
edition = "2021"

[workspace.dependencies]
# Anchor (pin everything consistently)
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl  = "0.31.1"
anchor-attribute-program = "0.31.1"
anchor-derive-accounts   = "0.31.1"

# Solana (pin to the same line you already have)
solana-program       = "=2.1.21"
solana-program-test  = "=2.1.21"
solana-sdk           = "=2.1.21"
solana-rent          = "=2.1.21"

# Other
anyhow = "1.0.86"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
